<resources>
    <string name="app_name">Математические формулы</string>
    <string name="btn_find">Find</string>
    <string name="et_enter_name_of_form">Введите название формулы</string>
    <string name="btn_back">Назад</string>
    <string name="back_to_lobby">В главное меню</string>
    <string-array name="classes">
        <item>5-ый класс</item>
        <item>6-ой класс</item>
        <item>7-ой класс</item>
        <item>8-ой класс</item>
        <item>9-ый класс</item>
        <item>10-ый класс</item>
        <item>11-ый класс</item>
    </string-array>
    <string name="btn_5">5-ый класс</string>
    <string name="btn_6">6-ой класс</string>
    <string name="btn_7">7-ой класс</string>
    <string name="btn_8">8-ой класс</string>
    <string name="btn_9">9-ый класс</string>
    <string name="btn_10">10-ый класс</string>
    <string name="btn_11">11-ый класс</string>
    <string name="open">Открыть класс</string>
    <string name="theme_name">Введите название темы</string>
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="formula_name">Введите название формулы</string>
    <string name="enter_formula">Введите формулу</string>
    <string name="enterclassnumber">Введите номер класса</string>
    <string name="formula">Formula</string>
    <string name="theme">Theme</string>
    <string name="by_themes">По темам</string>
    <string name="by_classes">По классам</string>
    <string name="start_text">В этом приложении Вы найдете все алгебраические формулы школьного курса,
        распределённые по темам и классам</string>

</resources>