<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addThemes"
    tools:context=".addformulas.mvvm.presentation.ui.AddThemesFragment">

    <EditText
        android:id="@+id/addThemesNameOfTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/theme_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addThemesAddBtn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:background="@null"
        android:text="@string/add"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/top_red"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/addThemesNameOfTheme"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/addThemesDeleteBtn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="29dp"
        android:background="@null"
        android:text="@string/delete"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/top_red"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addThemesAddBtn" />


    <TextView
        android:id="@+id/addThemesShowThemesOfFormula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addThemesDeleteBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>